2001-07-14  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump to 2.50d.

2001-07-14  Akim Demaille  <akim@epita.fr>

	Version 2.50c.
	* Makefile.maint (alpha): Typo.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Make): Macro names and underscore.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* config/config.guess, config/config.sub, config/texinfo.tex
	* doc/standards.texi, doc/make-stds.texi: Update.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* Makefile.maint (cvs-check, cvs-tag-check, cvs-diff-check): New.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* Makefile.maint (maintainer-check): Rename as...
	(maintainer-distcheck): this.
	(changelog-check, static-check): New.
	Use them.

2001-07-14  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi (C++ Compilers Characteristics): Last resort
	for CXX is g++, not gcc.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Files): New subsection.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (C Compiler, Fortran 77 Compiler): Be subsections
	of...
	(Generic Compiler Characteristics): this.
	(C++ Compiler): New subsection.

2001-07-14  Akim Demaille  <akim@epita.fr>

	* autoscan.in: Use IO::File.
	Adjust all the routines to use it.
	($log): New file (autoscan.log).
	(output): Dump detailed logs into $log, and a shortened version to
	stderr.
	(&scan_makefile): Refine the regexp catching tokens in the code.
	* doc/autoconf.texi (autoscan Invocation): Document `autoscan.log'
	and the `configure.ac' checking feature.

2001-07-12  Akim Demaille  <akim@epita.fr>

	For some AWK, such as on HPUX 11, `xfoo' does not match `foo|^bar'.
	Reported by Michael Elizabeth Chastain.

	* autoconf.in: Refuse such AWK.
	* configure.in: Likewise.
	* Makefile.am (acversion.m4): Do not use move-if-change this file
	has dependencies.
	* doc/autoconf.texi (Fortran 77 Compiler): Some typos.

2001-07-10  Jens Petersen  <petersen@redhat.com>
