@@ -90,6 +90,7 @@ Kurt D. Zeilenga            kurt@openldap.org
 Larry Schwimmer             rosebud@cyclone.stanford.edu
 Lars Hecking                lhecking@nmrc.ucc.ie
 Lars J. Aas                 larsa@sim.no
+Marc Espie                  Marc.Espie@liafa.jussieu.fr
 Marcus Daniels              marcus@sysc.pdx.edu
 Marcus Thiessel             marcus@xemacs.org
 Mark Elbrecht               snowball3@usa.net
